--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -1,21 +1,27 @@
-<div class="d-flex justify-content-center align-items-center flex-column h-75">
+<div
+  class="d-flex justify-content-center align-items-center flex-column h-75"
+  style="margin-top: 20vh !important"
+>
   <a
     href="/create"
-    class="btn btn-success btn-lg d-flex justify-content-center align-items-center my-3"
+    class="btn btn-success btn-lg d-flex justify-content-center align-items-center rounded-0 p-4 w-50 fw-bold my-3"
+    style="font-size: 3vmin !important"
   >
     <ion-icon name="create-outline"></ion-icon>&nbsp; Create Quiz
   </a>
 
   <a
     href="/dashboard"
-    class="btn btn-primary btn-lg d-flex justify-content-center align-items-center my-3"
+    class="btn btn-primary btn-lg d-flex justify-content-center align-items-center rounded-0 p-4 w-50 fw-bold my-3"
+    style="font-size: 3vmin !important"
   >
     <ion-icon name="grid-outline"></ion-icon>&nbsp; Dashboard
   </a>
 
   <a
     href="/reports"
-    class="btn btn-danger btn-lg d-flex justify-content-center align-items-center my-3"
+    class="btn btn-danger btn-lg d-flex justify-content-center align-items-center rounded-0 p-4 w-50 fw-bold my-3"
+    style="font-size: 3vmin !important"
   >
     <ion-icon name="stats-chart-outline"></ion-icon>&nbsp; Reports
   </a>
