--- a/views/playersLobby.ejs
+++ b/views/playersLobby.ejs
@@ -26,7 +26,10 @@
     <div class="loader"></div>
     <br />
   </body>
-
+  <audio class="remove-audio-timer" preload="auto" autoplay loop>
+    <source src="../../assets/lobby.mp3" type="audio/mpeg" />
+    Your browser does not support the audio tag.
+  </audio>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
     integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
