--- a/views/editquestion.ejs
+++ b/views/editquestion.ejs
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="../../css/bootstrap.min.css" />
 
     <style>
-      @media (max-width: 768px) {
+      @media (max-width: 1200px) {
         .container {
           width: 100% !important;
         }
       }
     </style>
   </head>
-  <body>
+  <body style="min-height: 100vh; height: 100%">
     <div class="container w-50 mt-5">
       <% if(findQuestion.questions[arr-1] != null){%><%-
       include("layouts/edithandlers.ejs")%> <%} else {%>
       <a
         href="/quiz/<%=findQuestion._id%>"
-        class="btn btn-primary btn-lg text-light d-flex justify-content-center align-items-center mb-3"
+        class="btn btn-primary btn-lg text-light d-flex justify-content-center align-items-center mb-3 rounded-0"
         style="min-width: 100px; width: 150px"
         ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Back</a
       >
-      <p class="alert alert-danger">No data found.</p>
+      <p class="alert alert-danger rounded-0">No data found.</p>
       <%}%>
     </div>
     <script
