--- a/views/questionsview.ejs
+++ b/views/questionsview.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
   </head>
-  <body>
+  <body style="min-height: 100vh; height: 100%">
     <header>
       <nav class="navbar navbar-expand-lg p-4">
         <div class="container-fluid">
@@ -39,19 +39,20 @@
                     id="navbarDropdownMenuLink"
                   >
                     <img
-                      src="../assets/profile.png"
+                      src="<%=findUser.avatar%>"
                       width="40"
                       height="40"
                       class="rounded-circle"
                     />
-                    &nbsp; <%if(findUser.isAdmin){%> Administrator <%} else {%>
-                    <%=findUser.name%> <%}%>
+                    &nbsp; <%=findUser.name%>
                   </a>
                   <ul
                     class="dropdown-menu dropdown-menu-end position-absolute"
                     aria-labelledby="navbarDropdownMenuLink"
                   >
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li>
+                      <a class="dropdown-item" href="/profile">Profile</a>
+                    </li>
                     <li class="logout-btn">
                       <a
                         class="dropdown-item logout-btn"
@@ -71,21 +72,33 @@
     <div class="container p-5">
       <a
         href="/dashboard"
-        class="btn btn-primary btn-lg text-light d-flex justify-content-center align-items-center mb-3"
+        class="btn btn-primary btn-lg text-light d-flex justify-content-center align-items-center mb-3 rounded-0"
         style="min-width: 100px; width: 150px"
         ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Back</a
       >
 
       <%- include("layouts/question.ejs")%>
 
-      <div class="text-center my-2">
+      <div
+        class="text-center my-2 d-flex justify-content-center align-items-center flex-wrap"
+      >
         <a
           href="/quiz/<%-findQuestion._id%>/add"
-          class="btn btn-lg btn-success m-2"
+          class="btn btn-lg btn-success m-2 rounded-0 py-3 px-5 fw-bold"
+          style="font-size: 1rem !important"
           >Add Question</a
         >
-        <a href="/host/<%-findQuestion._id%>" class="btn btn-lg btn-primary m-2"
+        <a
+          href="/host/<%-findQuestion._id%>"
+          class="btn btn-lg btn-primary m-2 rounded-0 py-3 px-5 fw-bold"
+          style="font-size: 1rem !important"
           >Start Quiz</a
+        >
+        <a
+          href="/api/question/randomize/<%-findQuestion._id%>"
+          class="btn btn-lg btn-secondary m-2 rounded-0 py-3 px-5 fw-bold"
+          style="font-size: 1rem !important"
+          >Randomize</a
         >
       </div>
     </div>
