--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -8,8 +8,38 @@
     <link rel="icon" href="./assets/QuBe-Logo.png" />
     <link rel="stylesheet" href="./css/home.css" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
+
+    <script>
+      function delete_report(id) {
+        swal({
+          title: 'Are you sure?',
+          text: 'Once deleted, you will not be able to recover this report.',
+          icon: 'warning',
+          buttons: true,
+          dangerMode: true,
+        }).then((willDecline) => {
+          if (willDecline) {
+            swal('Deleting...', {
+              icon: 'info',
+              timer: 2000,
+              button: false,
+            }).then(function () {
+              window.location = '/api/reports/delete/' + id;
+            });
+          }
+        });
+      }
+    </script>
   </head>
-  <body style="min-height: 100vh; height: 100%; min-width: 100vw; width: 100%">
+  <body
+    style="
+      min-height: 100vh;
+      height: 100%;
+      min-width: 100vw;
+      width: 100%;
+      overflow-x: hidden !important;
+    "
+  >
     <header>
       <nav class="navbar navbar-expand-lg p-4">
         <div class="container-fluid">
@@ -38,19 +68,20 @@
                     id="navbarDropdownMenuLink"
                   >
                     <img
-                      src="./assets/profile.png"
+                      src="<%=findUser.avatar%>"
                       width="40"
                       height="40"
                       class="rounded-circle"
                     />
-                    &nbsp; <%if(findUser.isAdmin){%> Administrator <%} else {%>
-                    <%=findUser.name%> <%}%>
+                    &nbsp; <%=findUser.name%>
                   </a>
                   <ul
                     class="dropdown-menu dropdown-menu-end position-absolute"
                     aria-labelledby="navbarDropdownMenuLink"
                   >
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li>
+                      <a class="dropdown-item" href="/profile">Profile</a>
+                    </li>
                     <li class="logout-btn">
                       <a
                         class="dropdown-item logout-btn"
@@ -68,9 +99,33 @@
     </header>
 
     <div class="container p-5">
-      <h1 class="text-light">Reports</h1>
+      <a
+        href="/home"
+        class="btn btn-primary rounded-0 btn-lg text-light d-flex justify-content-center align-items-center mb-3"
+        style="min-width: 100px; width: 150px"
+        ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Back</a
+      >
+      <div class="table-responsive">
+        <table class="table bg-light table-striped">
+          <thead>
+            <tr>
+              <th scope="col" class="p-4">Name</th>
+              <th scope="col" class="p-4">Description</th>
+              <th scope="col" class="p-4">Date</th>
+              <th scope="col" colspan="2" class="p-4">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <%-include("layouts/reportlist.ejs")%>
+          </tbody>
+        </table>
+      </div>
     </div>
 
+    <script
+      src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"
+      defer
+    ></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
