--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -58,7 +58,7 @@
           type="password"
           class="form-control-lg rounded-0 p-3 mb-3 border border-secondary w-100"
           placeholder="New Password"
-          name="placeholder"
+          name="password"
         />
 
         <button
