Dashboard Search Feature

--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -111,7 +111,7 @@
           type="text"
           class="form-control-lg rounded-0 border border-2"
           name="search"
-          placeholder="Search name"
+          placeholder="Search"
         />
         <div class="input-group-append">
           <button
