--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -105,6 +105,24 @@
         style="min-width: 100px; width: 150px"
         ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Back</a
       >
+
+      <form method="GET" class="input-group my-3">
+        <input
+          type="text"
+          class="form-control-lg rounded-0 border border-2"
+          name="search"
+          placeholder="Search"
+        />
+        <div class="input-group-append">
+          <button
+            class="btn btn-secondary btn-lg h-100 rounded-0 border border-2 border-secondary"
+            type="submit"
+          >
+            <ion-icon name="search-outline"></ion-icon>
+          </button>
+        </div>
+      </form>
+
       <div class="row d-flex flex-wrap">
         <%-include('layouts/cardquestion.ejs')%>
       </div>
