--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -26,10 +26,13 @@
                         <label for="firstname">Full Name</label>
                         <input type="text" name="name" id="firstname" required>
                     </div>
-                    <!-- <div class="form-item">
-                        <label for="lastname">Last Name</label>
-                        <input type="text" id="lastname">
-                    </div> -->
+                    <div class="form-item">
+                        <label for="type">Select Type</label>
+                        <select name="type" id="type" required>
+                            <option value="user" selected>User</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                    </div>
                     <div class="form-item">
                         <label for="email">Enter Email</label>
                         <input type="email" name="email" id="email" required>
