--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,11 +17,11 @@
           <li><a href="/registration">Sign Up</a></li>
         </ul>
       </div>
-      <div class="text">
-        <h1>A Quiz Bee Competition Platform</h1>
-        <p>This is some dummy text that can be change later on.</p>
-        <a href="/">Join a Quiz</a>
-      </div>
     </header>
+    <div class="text">
+      <h1>A Quiz Bee Competition Platform</h1>
+      <p>This is some dummy text that can be change later on.</p>
+      <a href="/login">Join a Quiz</a>
+    </div>
   </body>
 </html>
