--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,16 +4,15 @@
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: linear-gradient(45deg, #131086, #b621f3);
-  height: 100vh;
-}
-header {
+  /* background: linear-gradient(45deg, #131086, #b621f3); */
+  background-image: url('../assets/bg.jpg');
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  position: relative;
+  height: 100vh;
+  color: #333 !important;
 }
 .wrapper {
-  width: 100%;
+  width: 100vw;
   margin: auto;
 }
 .menu {
@@ -48,10 +47,13 @@ header {
   font-weight: bold;
 }
 .text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: absolute;
-  width: 600px;
-  height: 300px;
-  margin: 20% 30%;
+  width: 100vw;
+  height: 100vh;
   text-align: center;
 }
 .text h1 {
@@ -81,7 +83,7 @@ header {
   color: #fff;
   font-size: 20px;
 }
-@media (max-width: 650px) {
+/* @media (max-width: 650px) {
   .logo {
     float: none;
     width: 50%;
@@ -113,7 +115,7 @@ header {
     font-size: 12px;
     padding: 10px;
   }
-}
+} */
 
 .logout-btn:hover {
   background-color: rgb(221, 95, 95);
