--- a/views/layouts/question.ejs
+++ b/views/layouts/question.ejs
@@ -7,9 +7,11 @@ count++%>
 <div
   class="text-center border d-flex justify-content-between align-items-center w-auto mb-2"
 >
+  <%if(findQuestion.questions[count-1].question.level == "easy"){%>
+  <!-- easy -->
   <a
     href="/quiz/<%-findQuestion._id%>/<%=count%>"
-    class="btn btn-light btn-lg text-start w-100 rounded-0 px-3 py-3"
+    class="btn btn-success btn-lg text-start w-100 rounded-0 px-3 py-3 fw-medium"
     style="font-size: 2vmin !important"
     ><%=question.question.text%>
     <a
@@ -18,6 +20,35 @@ count++%>
       style="font-size: 2vmin !important; height: 100% !important"
       ><ion-icon name="trash-outline"></ion-icon></a
   ></a>
+
+  <%} else if(findQuestion.questions[count-1].question.level == "average") {%>
+  <!-- average -->
+  <a
+    href="/quiz/<%-findQuestion._id%>/<%=count%>"
+    class="btn btn-warning btn-lg text-start w-100 rounded-0 px-3 py-3 fw-medium"
+    style="font-size: 2vmin !important"
+    ><%=question.question.text%>
+    <a
+      href="/quiz/<%-findQuestion._id%>/<%=count%>/delete"
+      class="btn btn-danger rounded-0 py-3 px-3"
+      style="font-size: 2vmin !important; height: 100% !important"
+      ><ion-icon name="trash-outline"></ion-icon></a
+  ></a>
+
+  <%} else {%>
+  <!-- difficult -->
+  <a
+    href="/quiz/<%-findQuestion._id%>/<%=count%>"
+    class="btn btn-danger btn-lg text-start w-100 rounded-0 px-3 py-3 fw-medium"
+    style="font-size: 2vmin !important"
+    ><%=question.question.text%>
+    <a
+      href="/quiz/<%-findQuestion._id%>/<%=count%>/delete"
+      class="btn btn-danger rounded-0 py-3 px-3"
+      style="font-size: 2vmin !important; height: 100% !important"
+      ><ion-icon name="trash-outline"></ion-icon></a
+  ></a>
+  <%}%>
 </div>
 <% }) %> <%} else {%>
 <h6 class="alert alert-danger my-3 rounded-0 p-3" style="width: auto">
