--- a/views/hostGame.ejs
+++ b/views/hostGame.ejs
@@ -122,7 +122,12 @@
     </script>
   </head>
   <body style="min-height: 100vh; height: 100%; overflow-x: hidden">
-    <div class="container-fluid my-5">
+    <div class="container-fluid py-5">
+      <div
+        class="d-flex justify-content-center align-items-center flex-column text-center"
+        id="tie-id"
+      ></div>
+      <br />
       <div id="play-timer"></div>
       <p
         class="text-center text-light"
