--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | QuBe</title>
+    <title>QuBe</title>
     <link rel="icon" href="./assets/QuBe-Logo.png" />
     <link rel="stylesheet" href="./css/home.css" />
   </head>
   <body>
     <header>
       <div class="wrapper">
-        <div class="logo">QuBe</div>
+        <div class="logo">
+          <img src="./assets/QuBe-Logo.png"
+          alt="Logo"
+          width="50"
+          height="50"
+          class="d-inline-block align-text-top"
+        />
+        </div>
         <ul class="menu">
           <li><a href="/login">Login</a></li>
           <li><a href="/registration">Sign Up</a></li>
@@ -19,8 +26,8 @@
       </div>
     </header>
     <div class="text">
-      <h1>A Quiz Bee Competition Platform</h1>
-      <p>This is some dummy text that can be change later on.</p>
+      <h1>A Web-based Quiz Bee Competition Platform</h1>
+      <p>Are you a competitive one? <br> Be the next top player!</p>
       <a href="/login">Join a Quiz</a>
     </div>
   </body>
