--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -29,8 +29,8 @@
                     <div class="form-item">
                         <label for="type">Select Type</label>
                         <select name="type" id="type" required>
-                            <option value="user" selected>User</option>
-                            <option value="admin">Admin</option>
+                            <option value="user" selected>Player</option>
+                            <option value="admin">Quiz Master</option>
                         </select>
                     </div>
                     <div class="form-item">
