--- a/views/playerGame.ejs
+++ b/views/playerGame.ejs
@@ -14,6 +14,9 @@
     </script>
 
     <style>
+      * {
+        user-select: none;
+      }
       .type {
         width: auto !important;
       }
@@ -23,6 +26,19 @@
         top: 0;
         left: 0;
         z-index: 1030;
+      }
+
+      .fixed-bottom2 {
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 1030;
+        text-align: center;
+      }
+
+      .fixed-bottom2 a {
+        text-decoration: none;
+        color: red;
       }
 
       .outer-fit-this {
@@ -47,7 +63,7 @@
       @media (max-width: 768px) {
         .text-level {
           width: 75% !important;
-          font-size: 1.5rem !important;
+          font-size: 2rem !important;
         }
 
         .fit-this {
@@ -120,6 +136,11 @@
     style="min-height: 100vh; height: 100%; overflow-x: hidden"
     class="bg-dark"
   >
+    <div
+      class="d-flex justify-content-center align-items-center flex-column text-center"
+      id="tie-id"
+    ></div>
+    <br />
     <div id="play-timer"></div>
 
     <div class="container-fluid my-5">
@@ -155,6 +176,16 @@
       Score: 0
     </div>
 
+    <div
+      class="fixed-bottom2 m-3 bg-light w-auto p-3 d-flex justify-content-between align-items-center rounded"
+      id="points-count"
+      style="font-weight: bold; font-size: 1.5rem"
+    >
+      <a href="/home" class="" style="min-width: 100px; width: 150px"
+        ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Exit</a
+      >
+    </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
       integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
@@ -164,5 +195,6 @@
     <script src="../../js/bootstrap.bundle.min.js"></script>
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script src="../../modified-js/playerGame.js"></script>
+    <script src="../../modified-js/antiCheat.js"></script>
   </body>
 </html>
