--- a/views/questionsview.ejs
+++ b/views/questionsview.ejs
@@ -68,7 +68,6 @@
         </div>
       </nav>
     </header>
-
     <div class="container p-5">
       <a
         href="/dashboard"
@@ -77,8 +76,8 @@
         ><ion-icon name="arrow-back-circle-outline"></ion-icon>&nbsp;Back</a
       >
 
-      <%- include("layouts/question.ejs")%>
-
+      <%- include("layouts/question.ejs")%> <%-
+      include("layouts/tiebreaker.ejs")%>
       <div
         class="text-center my-2 d-flex justify-content-center align-items-center flex-wrap"
       >
@@ -99,6 +98,12 @@
           class="btn btn-lg btn-secondary m-2 rounded-0 py-3 px-5 fw-bold"
           style="font-size: 1rem !important"
           >Randomize</a
+        >
+        <a
+          href="/quiz/<%-findQuestion._id%>/addtie"
+          class="btn btn-lg btn-success m-2 rounded-0 py-3 px-5 fw-bold"
+          style="font-size: 1rem !important"
+          >Add Tie Breaker Question</a
         >
       </div>
     </div>
