--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -123,7 +123,7 @@
         </div>
       </form>
 
-      <div class="table-responsive">
+      <div class="table-responsive reports-table">
         <table class="table bg-light table-striped">
           <thead>
             <tr>
